# vulsim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  common.h  index.ai.md  prm.txt  rtlzz_issue.md  todolist.md  vulsim_codegen.py  vulsimlib.h
doc/: bundlelib.md  combine_gen.md  errorcode.md  format.md  llm_rulelist.md  module.md  operation.md  prefabricated.md  project.md  simulation_gen.md  vularch.md  xmlformat.md
doc/api/: api.md
doc/api/json/: bundleitem.md  instance.md  module.md  pipe.md  reqserv.md  storage.md
doc/api/operation/: cancel.md  cancle.md  history.md  list.md  load.md  redo.md  save.md
doc/api/operation/bundlelib/: add.md  comment.md  list.md  listref.md  remove.md  update.md
doc/api/operation/code/: get.md  getsymbol.md  update.md
doc/api/operation/configlib/: comment.md  list.md  listref.md  remove.md  rename.md
doc/api/operation/module/: connect.md  disconn.md  info.md  pdisconn.md  remove.md  sconn.md  uconn.md  udisconn.md
doc/api/operation/simulation/: start.md  state.md
doc/backend/: bundlelib.md  configlib.md  module.md  testharness.md  xmlformat.md
doc/backend/api/json/: symbols.md
doc/backend/api/operation/: create.md  info.md  undo.md
doc/userguide/: 1-intro.md  2-header.md  3-module.md  4-Main.md  5-uint.md  6-bram.md  7-queue.md  8-arrayization.md  9-debugging.md  llm_rulelist.md
doc/vulcpp/: 1-intro.md  2-header.md  3-module.md  4-Main.md  5-uint.md  6-bram.md  7-debugging.md  8-debugging.md
doc/vullib/: queue.md  ram.md  storage.md  uint.md  vcdrecord.md
example/: test_header.hpp
example/aes1/: AES1.hpp  AES1Main.cpp  AES1Main.hpp  header.hpp
example/apiinline_proxy/: Top.hpp  header.hpp
example/apiinline_register/: Top.hpp  header.hpp
example/array1d/: LineNode.hpp  Main.cpp  Top.hpp  header.hpp
example/cachetest/: SimpleCache.hpp  TestMain.cpp  header.hpp
example/childalias/: IncNode.hpp  Main.cpp  Top.hpp
example/enumdemo/: Main.cpp  Top.hpp  header.hpp
example/enumdemo/test/: Main.cpp
example/fifotest/: FIFO.hpp  Reader.hpp  TestMain.cpp  Top.hpp
example/fmac/: FMAC16.hpp  Main.cpp
example/mulu32/: Main.cpp  MulU32.hpp  header.hpp
example/ooo_backend/: header.hpp
example/ooo_backend/core/: ALUPipeline.hpp  BackendCore.hpp  LSUPipeline.hpp
example/ooo_backend/test/: AluMain.cpp  LsuMain.cpp  MainNarrow.cpp  MainWide.cpp
example/pipe5/: config.xml
example/pipe5/bundle/: EXData.xml  IDData.xml  MemData.xml  RV64DecInst.xml
example/pipe5/combine/: alufpu.xml  decode.xml  exstage.xml  idstage.xml  ifstage.xml  memstage.xml  simplemem.xml  tlb.xml  wbstage.xml
example/pipe5/cpp/: EXStage.cpp  IDStage.cpp  IFStage.cpp  MemStage.cpp  RV64ALUFPU.cpp  RV64Decoder.cpp  RV64SimpleMem.cpp  WbStage.cpp  bundles.h  global.h
example/pipeline_holdreset/: Main.cpp  Top.hpp  header.hpp
example/prodcon/: Consumer.hpp  Main.cpp  Main.hpp  Producer.hpp  TopModule.hpp  header.hpp
example/querydemo/: CounterNode.hpp  Main.cpp  Top.hpp  header.hpp
example/queue_mp_demo/: Top.hpp  header.hpp
example/queue_mp_demo/test/: Main.cpp
example/rv64ima5/: Top.hpp  header.hpp
example/rv64ima5/core/: Core.hpp  Decoder.hpp  ExecuteUnit.hpp  RegisterFile.hpp
example/rv64ima5/test/: DecoderMain.cpp  ExecuteMain.cpp  Main.cpp  RegFileMain.cpp
example/systolic2d/: Main.cpp  Top.hpp  header.hpp
example/verilator_fsm/: TestMain.cpp  Top.hpp  header.hpp
frontend/: README.md
lib/: CMakeLists.txt  cmdargs.cpp  common.h  main.cpp  pipe.hpp  sectrl.h  simulation.h  storage.hpp  vulsimlib.h
prefab/SimpleMemoryBlock64/: SimpleMemoryBlock64.h  SimpleMemoryBlock64.xml
prefab/SimpleMemoryBlock64/source/: SimpleMemoryBlock.cpp
scripts/: hls_transform.py  test_apiinline_proxy.sh  test_apiinline_register.sh
src/: breakpoint.hpp  bundlelib.cpp  bundlelib.h  cloc_exclude.txt  codegen.cpp  codegen.h  codehelper.cpp  codehelper.h  command.cpp  command.h  configexpr.cpp  configexpr.hpp  configlib.cpp  configlib.h  configuration.cpp  configuration.h  console.cpp  console.h  cppparse.cpp  cppparse.hpp  debugmap.hpp  design.cpp  design.h  errormsg.cpp  errormsg.hpp  format.md  main.cpp  module.cpp  module.h  module.hpp  modulelib.cpp  pipetype.hpp  prefab.cpp  prefab.h  project.cpp  project.h  projman.cpp  projman.h  rtlgen.cpp  rtlgen.h  (+18 more)
src/apiinline/: apiinline.cpp  apiinline.hpp  bram.cpp  bram.hpp  queue.cpp  queue.hpp  register.cpp  register.hpp  request.cpp  request.hpp  utils.cpp  utils.hpp
src/operation/: cancel.cpp  create.cpp  history.cpp  info.cpp  list.cpp  load.cpp  redo.cpp  save.cpp  undo.cpp
src/operation/bundlelib/: add.cpp  comment.cpp  list.cpp  listref.cpp  remove.cpp  rename.cpp  update.cpp
src/operation/code/: get.cpp  getsymbol.cpp  update.cpp
src/operation/configlib/: add.cpp  comment.cpp  list.cpp  listref.cpp  remove.cpp  rename.cpp  update.cpp
src/operation/module/: add.cpp  conn.cpp  disconn.cpp  info.cpp  list.cpp  pconn.cpp  pdisconn.cpp  remove.cpp  rename.cpp  sconn.cpp  sdisconn.cpp  uconn.cpp  udisconn.cpp
src/operation/module/bundle/: get.cpp  set.cpp
src/operation/module/config/: set.cpp
src/operation/module/instance/: get.cpp  set.cpp
src/operation/module/pipe/: get.cpp  set.cpp
src/operation/module/pipeport/: add.cpp  remove.cpp  rename.cpp  update.cpp
src/operation/module/reqserv/: add.cpp  get.cpp  remove.cpp  (+2 more)
src/operation/simulation/: cancel.cpp  list.cpp  start.cpp  state.cpp
src/platform/: childproc.cpp  childproc.hpp  env.hpp  tcpsocket.hpp  time.hpp
src/simulation/: logsocket.cpp  logsocket.h  simman.cpp  simman.h
src/tui/: main.cpp  tcpsocket.hpp  tui.cpp  tui.h
tools/: vcpp.hpp  vulrtlgen.cpp  vulsimgen.cpp  vultest_header.cpp  vultest_module.cpp
tui/: main.cpp
vullib/: common.h  defhelper.hpp  fixint.hpp  main.cpp  pipe.hpp  queue.hpp  queue.sv  ram.hpp  ram_generic.sv  run.hpp  storage.hpp  uint.hpp  vcdrecord.hpp  vullib.h
vullib/test/: fixint.cpp  pipe.cpp  queue_test.cpp  queue_ub_stress.cpp  ram.cpp  ram_ub_stress.cpp  storage_ub_stress.cpp  storage_write_contract.cpp  ub_safety.cpp  uint.cpp  vcd.cpp
(+39 files in other folders)
